--- a/Pages/Admin/Logs.cshtml
+++ b/Pages/Admin/Logs.cshtml
@@ -4,12 +4,12 @@
 @{
     ViewData["Title"] = "Admin";
 }
-
     
 <h1>Logs</h1>
+
 <partial name="_FlashPartial" />
 
-<table class="dt">
+<table class="dt crud_table">
     <tr>
         <th>File</th>
         <th>Action</th>
@@ -31,7 +31,7 @@
 
     }
 </table>
-    
+
 
 @section Scripts {
     
