--- a/Pages/Admin/Organizations.cshtml
+++ b/Pages/Admin/Organizations.cshtml
@@ -5,13 +5,17 @@
     ViewData["Title"] = "Organizations";
 }
 
+<div class="centered">
+
 <h1>@ViewData["Title"]</h1>
+
 <partial name="_FlashPartial" />
 
-
-<a href="Organization?id=0">Create Organization</a>
+<div><a href="Organization?id=0">Create Organization</a></div>
 
 <partial name="_CrudDataTablePartial" />
+
+</div>
 
 @section Scripts {
     
