--- a/Pages/Admin/User.cshtml
+++ b/Pages/Admin/User.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1>Update User</h1>
-<div class="just_left">
+<div>
     <a href="Users">Back to Users</a>
 </div>
 <partial name="_FlashPartial" />
