--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -17,8 +17,8 @@
 </div>
 <br>
 
-<div>Set up your own lists of Issue Attribues - UNDER CONSTRUCTION</div>
-<div><a href="/Admin/Organizations">Organizations</a></div>
+<div><a href="/Admin/Organizations">Organizations</a> - Under Construction </div>
+
 <br>
 @{
     if (bd_config.get(bd_config.CustomFieldEnabled1) == 1) 
@@ -28,6 +28,7 @@
             - See budoco_settings_active.txt, CustomFieldEnabled1 and related settings
         </div>
     }
+    
     if (bd_config.get(bd_config.CustomFieldEnabled2) == 1) 
     {
         <div>
@@ -35,6 +36,7 @@
             - See budoco_settings_active.txt, CustomFieldEnabled2 and related settings
         </div>
     }
+    
     if (bd_config.get(bd_config.CustomFieldEnabled3) == 1) 
     {
         <div>
@@ -42,7 +44,30 @@
             - See budoco_settings_active.txt, CustomFieldEnabled3 and related settings
          </div>
     }
-
+    
+    if (bd_config.get(bd_config.CustomFieldEnabled4) == 1) 
+    {
+        <div>
+            <a href="/Admin/List?field=4">@bd_config.get(bd_config.CustomFieldLabelPlural4)</a>
+            - See budoco_settings_active.txt, CustomFieldEnabled4 and related settings
+         </div>
+    }    
+    
+    if (bd_config.get(bd_config.CustomFieldEnabled5) == 1) 
+    {
+        <div>
+            <a href="/Admin/List?field=5">@bd_config.get(bd_config.CustomFieldLabelPlural5)</a>
+            - See budoco_settings_active.txt, CustomFieldEnabled5 and related settings
+         </div>
+    }    
+    
+    if (bd_config.get(bd_config.CustomFieldEnabled5) == 1) 
+    {
+        <div>
+            <a href="/Admin/List?field=6">@bd_config.get(bd_config.CustomFieldLabelPlural6)</a>
+            - See budoco_settings_active.txt, CustomFieldEnabled6 and related settings
+         </div>
+    }
 }
 
 <br>
