--- a/Pages/Admin/EmailQueue.cshtml
+++ b/Pages/Admin/EmailQueue.cshtml
@@ -5,30 +5,35 @@
     ViewData["Title"] = "Email Queue";
 }
 
+<div class="just_left">
 <h1>@ViewData["Title"]</h1>
+
 <partial name="_FlashPartial" />
 
-<span class="just_left fake_link" onclick="document.location.reload()">
+<div class="fake_link" onclick="document.location.reload()">
 Refresh this page
 </div>
 
-<div class="just_left fake_link" onclick="reset_counts()">
+<div class="fake_link" onclick="reset_counts()">
 Reset retry counts
 </div>
 
-<div class="just_left fake_link" onclick="retry()">
+<div class="fake_link" onclick="retry()">
 Retry sending
 </div>
 
-<div class="just_left fake_link" onclick="delete_all()">
+<div class="fake_link" onclick="delete_all()">
 Delete all entries
 </div>
 
 <partial name="_CrudDataTablePartial" />
 
+</div>
+
 <form id="post_action_form" style="display:none;" method="post">
     <input asp-for="queue_action" value=""/>
 </form>
+
 
 @section Scripts {
 
