--- a/Pages/Shared/_CrudDataTablePartial.cshtml
+++ b/Pages/Shared/_CrudDataTablePartial.cshtml
@@ -1,6 +1,6 @@
 <partial name="_FlashPartial" />
 
-<div class="data_table_div">
+<div class="data_table_div crud_table">
 
     <table class="dt">
         @{
