Migrate "Reports" feature

--- a/Pages/Shared/_layout_logged_in.cshtml
+++ b/Pages/Shared/_layout_logged_in.cshtml
@@ -84,6 +84,7 @@
                             {
                                 <td><a asp-page="/Admin/RunSql">Run Sql</a></td>
                             }
+                            <td><a asp-page="/Report/Index">Reports</a></td>
                         }
                     }
 
