--- a/Pages/Admin/EmailQueue.cshtml
+++ b/Pages/Admin/EmailQueue.cshtml
@@ -2,7 +2,7 @@
 @model EmailQueueModel
 
 @{
-    ViewData["Title"] = "Email Queue";
+    ViewData["Title"] = "Outgoing Email Queue";
 }
 
 <div class="just_left">
