--- a/Pages/Admin/Query.cshtml
+++ b/Pages/Admin/Query.cshtml
@@ -6,7 +6,8 @@
     ViewData["Title"] = "Issue Query";
 }
 
-<h1>Issue Query</h1>
+<h1>Create/Update @ViewData["Title"]</h1>
+
 <div class="just_left">
     <a href="Queries">Back to Queries</a>
 </div>
