--- a/Pages/Admin/User.cshtml
+++ b/Pages/Admin/User.cshtml
@@ -2,10 +2,11 @@
 @model UserModel
 @using Microsoft.AspNetCore.Http
 @{
-    ViewData["Title"] = "Users";
+    ViewData["Title"] = "User";
 }
 
-<h1>Update User</h1>
+<h1>Update @ViewData["Title"]</h1>
+
 <div>
     <a href="Users">Back to Users</a>
 </div>
