--- a/Pages/Admin/RunSql.cshtml
+++ b/Pages/Admin/RunSql.cshtml
@@ -6,7 +6,8 @@
     ViewData["Title"] = "Run Sql";
 }
 
-<h1>Run Sql</h1>
+<h1>@ViewData["Title"]</h1>
+
 <partial name="_FlashPartial" />
 
 <div class="form_div">
