org permissions in progress

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -18,7 +18,7 @@
 
 <tr>
     <td><a href="/Admin/Organizations">Organizations</a>
-    <td>Create and update organizations.
+    <td>Users assigned to organizations can only view and update issues associated with their organization.
 </tr>
 
 @{
