preparing for org sql altering

--- a/Pages/Issues.cshtml
+++ b/Pages/Issues.cshtml
@@ -124,7 +124,7 @@
 
     function on_query_change() {
         var query_id = $("#query_id").val();
-        window.location.href = "Issues?page=1&query_id=" + query_id
+        window.location.href = "Issues?page=1&sort=-1&query_id=" + query_id
     }
 
     function on_sort(col) {
